Change data source from manga_minmaxt.csv to manga.csv

--- a/agrupamento.ipynb
+++ b/agrupamento.ipynb
@@ -14,7 +14,7 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "# 1. Carregar os dados\n",
-    "df = pd.read_csv('manga_minmaxt.csv')"
+    "df = pd.read_csv('manga.csv')"
    ]
   },
   {
@@ -268,7 +268,7 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv('manga_minmaxt.csv')\n",
+    "df = pd.read_csv('manga.csv')\n",
     "\n",
     "# Gerar as regras\n",
     "# min_lift=1.2: Queremos combinações que são 20% mais prováveis do que o acaso\n",
